tests/bad/struct_method_redef_field.ae
/// fail: Field with this name already exists

struct Foo {
    len: i32
}

def Foo::len(this) {}
